[package]
name = "canvas-bench"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20"
log = "0.4"
gl = "0.14"
half = "1.4"
image = "0.23"
pathfinder_canvas = { git = "https://github.com/servo/pathfinder", features = ["pf-text"] }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder" }
offscreen_gl_context = { path = "../rust-offscreen-rendering-context" }
sparkle = "0.1"
